--- a/public/asset_dashboard/pages/forms/advanced.html
+++ b/public/asset_dashboard/pages/forms/advanced.html
@@ -764,8 +764,8 @@
                 <!-- /.form-group -->
                 <div class="form-group">
                   <label>Disabled</label>
-                  <select class="form-control select2" disabled="disabled" style="width: 100%;">
-                    <option selected="selected">Alabama</option>
+                  <select class="form-control select2" disabled="disabled" style="width: 100%; height: 100%;">
+                    <option selected>Alabama</option>
                     <option>Alaska</option>
                     <option>California</option>
                     <option>Delaware</option>
